# ccc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/application/api/: main.py
app/domain/entities/: messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/tests/domain/values/: test_messages.py
docker_compose/: app.yml
